--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;900&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="./css/animate.css">
     <title>Nestor Guzman</title>
 </head>
 <body>
     <header>
         <div class="container-logo">
-            <img src="./images/next-logo.png" alt="">
+            <img src="./images/next-logo..png" alt="">
         </div>
         <nav class="navbar">
             <ul class="nav menu__list">
@@ -60,7 +58,7 @@
         </div>
 
         <div class="container__image-profile">
-            <img src="./images/profile.jpg" alt="">
+            <img src="./images/profile..jpg" alt="">
             <div class="circle1"></div>
             <div class="circle2"></div>
         </div>  
@@ -77,7 +75,7 @@
         <h2 id="about-me" data-section="profile|titles" data-value="aboutMe">About Me</h2>
         <div class="hero">
             <div class="container__image-about">
-                <img src="./images/profile-3.jpeg" alt="">
+                <img src="./images/profile-3..jpeg" alt="">
             </div>
             <div class="container__text-about">
                 <p id="bio-1" data-section="profile" data-value="bio1"></p>
@@ -142,8 +140,8 @@
 
    </footer> 
 </body>
-<script src="./js/menu.js" type="module"></script>
+<!-- <script src="./js/menu.js" type="module"></script>
 <script src="./js/main.js" type="module"></script>
 <script src="./js/info-trad.js" type="module"></script>
-<script src="./js/index.js" type="module"></script>
+<script src="./js/index.js" type="module"></script> -->
 </html>
