ajuste de server dev

--- a/src/index.html
+++ b/src/index.html
@@ -115,16 +115,16 @@
             <form method="post" action="#">
                 <div class="fields">
                     <div class="field half">
-                        <input type="text" name="name" id="name" value="" placeholder="Nombre" required/>
+                        <input type="email" name="email" id="email" value="" placeholder="Correo" required/>
                     </div>
                     <div class="field half">
-                        <input type="email" name="email" id="email" value="" placeholder="Correo" required/>
+                        <input type="text" name="customer" id="customer" placeholder="Nombre" required/>
                     </div>
                     <div class="field half">
                         <input type="number" name="tel" id="tel" value="" placeholder="Teléfono" required/>
                     </div>
                     <div class="field half">
-                        <textarea type="text" name="tel" id="tel" value="" placeholder="Your comment..." required/></textarea>
+                        <textarea placeholder="Your comment..." required></textarea>
                     </div>
                 </div>
                 <div class="actions special">
