se modifica efecto de typewritter

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
     <main>
         <div class="container__title">
              <div class="container__typewriter">
-                <p data-text="" data-section="profile|dataText" data-value="introd1"></p>
+                <p data-text="Hi, I'm" data-section="profile|dataText" data-value="introd1"></p>
                 <p data-text="Néstor Guzmán"></p>
                 <p data-text="software developer" data-section="profile|dataText" data-value="intro3"></p>
                 <p data-text="and frontend specialist" data-section="profile|dataText" data-value="intro4"></p>
@@ -115,16 +115,16 @@
             <form method="post" action="#">
                 <div class="fields">
                     <div class="field half">
-                        <input type="text" name="name" id="name" value="" placeholder="Nombre" required/>
+                        <input type="text" name="name" id="name" placeholder="Nombre" required/>
                     </div>
                     <div class="field half">
-                        <input type="email" name="email" id="email" value="" placeholder="Correo" required/>
+                        <input type="email" name="email" id="email" placeholder="Correo" required/>
                     </div>
                     <div class="field half">
-                        <input type="number" name="tel" id="tel" value="" placeholder="Teléfono" required/>
+                        <input type="number" name="tel" id="tel" placeholder="Teléfono" required/>
                     </div>
                     <div class="field half">
-                        <textarea type="text" name="tel" id="tel" value="" placeholder="Your comment..." required/></textarea>
+                        <textarea name="comment" id="comment" placeholder="Your comment..." required></textarea>
                     </div>
                 </div>
                 <div class="actions special">
@@ -140,8 +140,8 @@
 
    </footer> 
 </body>
-<!-- <script src="./js/menu.js" type="module"></script>
+<script src="./js/menu.js" type="module"></script>
 <script src="./js/main.js" type="module"></script>
 <script src="./js/info-trad.js" type="module"></script>
-<script src="./js/index.js" type="module"></script> -->
+<script src="./js/index.js" type="module"></script>
 </html>
