Configuracion y compresion para la optimizacion de imagenes

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <!--     <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <link rel="icon" type="image/x-icon" href="./images/brand.png">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -24,7 +25,7 @@
                 <li class="nav-item"><i class="fas fa-tools"></i> <a href="#portfolio" data-section="profile|menu"
                         data-value="portfolio">Projects</a></li>
                 <li class="nav-item"><i class="fas fa-suitcase"></i> <a href="#contact-me" data-section="profile|menu"
-                        data-value="contact">Work Together?</a></li>
+                        data-value="contact">Contact</a></li>
                 <div class="toggle-container">
                     <button id="toggle-btn-mob" class="toggle-button eng">
                         <span id="lang-text-mob">ENG</span>
@@ -110,6 +111,16 @@
                 </div>
             </div>
         </div>
+        <div class="container-subs">
+            <div class="leading-relaxed subsection neon-box-blue show">
+                <h3>What I Do</h3>
+                <p id="i-do" data-section="profile" data-value="iDo"></p>
+            </div>
+            <div class="leading-relaxed subsection neon-box-pink show">
+                <h3>My Approach</h3>
+                <p id="approach" data-section="profile" data-value="approach"></p>
+            </div>
+        </div>
     </section>
     <section class="projects" id="portfolio">
         <h2 data-section="profile|titles" data-value="Portfolio">Portfolio</h2>
@@ -123,14 +134,118 @@
             <h3>Projects</h3>
             <div class="container__project-cards">
                 <div class="project-card">
-                    <div class="card-content"></div>
-                    <div class="card-glow"></div>
+                    <div class="card-content">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/Software-programmer-writing-code-top-view-2021-09-24-04-09-47-utc.jpg/800px-Software-programmer-writing-code-top-view-2021-09-24-04-09-47-utc.jpg?20220712121701" alt=""/>
+                    </div>
+                    <div class="card-glow">
+                        <h3>Movie streaming</h3>
+                        <p>A modern web application</p>
+                        <div class="tags-container">
+                            <span class="tag">JS Vanilla</span>
+                            <span class="tag">SPA</span>
+                            <span class="tag">HTML</span>
+                        </div>
+                        <div class="card-icons">
+                            <a href=""><i class="fab fa-github"></i></a>
+                            <a href="https://nestorguzman182.github.io/movies-api-rest/"><i class="fas fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="card-content">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/Software-programmer-writing-code-top-view-2021-09-24-04-09-47-utc.jpg/800px-Software-programmer-writing-code-top-view-2021-09-24-04-09-47-utc.jpg?20220712121701" alt=""/>
+                    </div>
+                    <div class="card-glow">
+                        <h3>Movie streaming</h3>
+                        <p>A modern web application</p>
+                        <div class="tags-container">
+                            <span class="tag">JS Vanilla</span>
+                            <span class="tag">SPA</span>
+                            <span class="tag">HTML</span>
+                        </div>
+                        <div class="card-icons">
+                            <a href=""><i class="fab fa-github"></i></a>
+                            <a href="https://nestorguzman182.github.io/movies-api-rest/"><i class="fas fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="card-content">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/Software-programmer-writing-code-top-view-2021-09-24-04-09-47-utc.jpg/800px-Software-programmer-writing-code-top-view-2021-09-24-04-09-47-utc.jpg?20220712121701" alt=""/>
+                    </div>
+<!--                     <div class="card-glow">
+                        <h3>Movie streaming</h3>
+                        <p>A modern web application</p>
+                        <div class="tags-container">
+                            <span class="tag">JS Vanilla</span>
+                            <span class="tag">SPA</span>
+                            <span class="tag">HTML</span>
+                        </div>
+                        <div class="card-icons">
+                            <a href=""><i class="fab fa-github"></i></a>
+                            <a href="https://nestorguzman182.github.io/movies-api-rest/"><i class="fas fa-eye"></i></a>
+                        </div>
+                    </div> -->
+                </div>
+                <div class="project-card">
+                    <div class="card-content">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/Software-programmer-writing-code-top-view-2021-09-24-04-09-47-utc.jpg/800px-Software-programmer-writing-code-top-view-2021-09-24-04-09-47-utc.jpg?20220712121701" alt=""/>
+                    </div>
+                    <div class="card-glow">
+                        <h3>Movie streaming</h3>
+                        <p>A modern web application</p>
+                        <div class="tags-container">
+                            <span class="tag">JS Vanilla</span>
+                            <span class="tag">SPA</span>
+                            <span class="tag">HTML</span>
+                        </div>
+                        <div class="card-icons">
+                            <a href=""><i class="fab fa-github"></i></a>
+                            <a href="https://nestorguzman182.github.io/movies-api-rest/"><i class="fas fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="card-content">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/Software-programmer-writing-code-top-view-2021-09-24-04-09-47-utc.jpg/800px-Software-programmer-writing-code-top-view-2021-09-24-04-09-47-utc.jpg?20220712121701" alt=""/>
+                    </div>
+                    <div class="card-glow">
+                        <h3>Movie streaming</h3>
+                        <p>A modern web application</p>
+                        <div class="tags-container">
+                            <span class="tag">JS Vanilla</span>
+                            <span class="tag">SPA</span>
+                            <span class="tag">HTML</span>
+                        </div>
+                        <div class="card-icons">
+                            <a href=""><i class="fab fa-github"></i></a>
+                            <a href="https://nestorguzman182.github.io/movies-api-rest/"><i class="fas fa-eye"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="card-content">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/Software-programmer-writing-code-top-view-2021-09-24-04-09-47-utc.jpg/800px-Software-programmer-writing-code-top-view-2021-09-24-04-09-47-utc.jpg?20220712121701" alt=""/>
+                    </div>
+                    <div class="card-glow">
+                        <h3>Movie streaming</h3>
+                        <p>A modern web application</p>
+                        <div class="tags-container">
+                            <span class="tag">JS Vanilla</span>
+                            <span class="tag">SPA</span>
+                            <span class="tag">HTML</span>
+                        </div>
+                        <div class="card-icons">
+                            <a href=""><i class="fab fa-github"></i></a>
+                            <a href="https://nestorguzman182.github.io/movies-api-rest/"><i class="fas fa-eye"></i></a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
     <section id="contact-me">
-        <h2 data-section="profile|titles" data-value="contact">Contact Me</h2>
+        <h2 data-section="profile|titles" data-value="contact">Get in Touch</h2>
         <div>
             <p data-section="profile" data-value="contactMe"></p>
             <form method="post" action="#" id="contact-form">
